Ensure that there are no scrollbars present

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 .canvas-main {
     max-width: 100%;
     min-height: 600px;
